# relife-financial-service

./: .gitignore  CASH_FLOW_CHART_METADATA.md  CLAUDE.md  Dockerfile  PROFESSIONAL_OUTPUT_DOCUMENTATION.md  README.md  Risk_Assessment_Documentation.docx  Risk_Assessment_Documentation.md  Taskfile.yml  pyproject.toml  smoke-test.ps1
.github/workflows/: docker-publish.yml  smoke-test.yml
Financial Service Updates/ARV/: README_epc_mapping.md  test_model_country_epc_to_italy.py  test_model_energy_consumption_to_greek_epc.py
Financial Service Updates/Risk Assessment/: financial_simulation_with_schemes.py  inputs_required.md
Indicator Modules/: visualizations.py
docs/: API_ARCHITECTURE.md  API_USER_INPUTS.md  ARV_API_FRONTEND_CHANGELOG.md  CAPEX_OPEX_INTEGRATION.md  CHART_METADATA_VISUALIZATION.md  FINANCIAL_SERVICE_UPDATES_DELTA.md  INPUT_DATA_STRUCTURE.md  PRIVATE_VS_PROFESSIONAL_OUTPUT.md  RISK_ASSESSMENT_API_FRONTEND_CHANGELOG.md  RISK_ASSESSMENT_API_PROGRESS.md
docs/visualizations/: sample_chart_metadata.json
flowcharts/: ReLIFE_HMA_flowchart.md  ReLIFE_PRA_flowchart.md
scripts/: visualize_chart_metadata.py
src/relife_financial/: app.py  test.ipynb
src/relife_financial/Indicator Modules/: indicator_outputs.py  simulation_engine.py
src/relife_financial/NTUA_source/: README_new.md  risk_assessment_v3.py  test_arv_model.py
src/relife_financial/auth/: keycloak.py  (+1 more)
tests/: conftest.py  test_app.py  test_arv_route.py  test_auth_simple.py  test_capex_opex_lookup.py  test_health.py  test_storage_simple.py  test_universal_auth.py  test_visualization_data.py
(+24 files in other folders)
